service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP ip
      port: 4499
      targetPort: 4499
  type: ClusterIP
